2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Added margin and new wrap style

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Updated to not munge the text on an insert if
	  things are selected

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* ChangeLog, Banter/Application.cs: Applied patch from Johnny Jacob
	  <jjohnny@novell.com>
	* Banter/ChangeLog: Removed outdated changelog... all changes go in the
	  root changelog

2007-08-04  Johnny Jacob  <jjohnny@novell.com>

	* Application.cs : Open/Show GroupWindow on left click on trayicon

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs, Banter/PersonCard.cs: Added tool tips

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Removed the users controls when they are in the
	  process of being removed

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUser.cs: Updated exceptions to state the actual
	  problem
	* Banter/PersonCard.cs: Added calls to RevokeInvitations and remove
	  users

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated to handle accepting invitations very
	  well!  Also modified so there is only one remove and it's the same
	  for all people

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/SidebarTextButton.cs, Banter/Makefile.am: Added
	  SidebarTextButton
	* Banter/GroupWindow.cs, Banter/PersonCard.cs, Banter/PersonView.cs:
	  Added button to remove people

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: added method to invite a remote user

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: added methods to deny authorization
	* Banter/ProviderUser.cs: added method to deny authorization
	* Banter/PersonCard.cs: added methods to authorize a user

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
